--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 
 	<body onLoad="onLoad()">
-		Press any key or click to <span id="play-pause">play</span>.
+		Press any key or click to play.
+		<div id="playing-notes" />
 	</body>
 
 </html>
