--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 	<body onLoad="onLoad()">
 		Press any key or click to play.
-		<div id="playing-notes" />
+		<div id="playing-notes"></div>
+
+		<button id="stop-button">Make it stop!</button>
 	</body>
 
 </html>
