--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<title>Web Audio Test</title>
+		<title>Mad Music</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="main.js"></script>
 	</head>
