--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
 		<title>Mad Music</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="main.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
 	</head>
 
 	<body onLoad="onLoad()">
-		Press any key or click to play.
+		<div id="headline">Mad Music</div>
+		<hr />
+		<div id="instructions">
+			<div id="browser-warning">Works in Chrome. Fails in inexplicably Firefox.</div>
+			<div>Press any key or click to play.</div>
+		</div>
+
 		<div id="playing-notes"></div>
 
-		<button id="stop-button">Make it stop!</button>
+		<button id="stop-button">Please... Make it stop!</button>
 	</body>
 
 </html>
