--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 	<body onLoad="onLoad()">
 		<div id="headline">Mad Music</div>
 		<hr />
-		<div id="instructions">
-			<div id="browser-warning">Works in Chrome. Fails in inexplicably Firefox.</div>
-			<div>Press any key or click to play.</div>
+		<div id="links">
+			<ul>
+				<li><a href="proj-1.html">Experiment 1</a></li>
+				<li><a href="proj-2.html">Experiment 2</a></li>
+			</ul>
 		</div>
-
-		<div id="playing-notes"></div>
-
-		<button id="stop-button">Please... Make it stop!</button>
 	</body>
 
 </html>
