--- a/proj-2.html
+++ b/proj-2.html
@@ -18,7 +18,7 @@
 
 		<div id="playing-notes"></div>
 
-		<button id="stop-button">Please... Make it stop!</button>
+		<button id="stop-button">Do something different</button>
 	</body>
 
 </html>
