--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			<ul>
 				<li><a href="proj-1.html">Experiment 1</a></li>
 				<li><a href="proj-2.html">Experiment 2</a></li>
+				<li><a href="proj-3.html">Experiment 3</a></li>
 			</ul>
 		</div>
 	</body>
