--- a/proj-2.html
+++ b/proj-2.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Mad Music</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<script type="text/javascript" src="utils.js"></script>
-		<script type="text/javascript" src="main-2.js"></script>
+		<script type="text/javascript" src="scripts/utils.js"></script>
+		<script type="text/javascript" src="scripts/main-2.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
 	</head>
 
