--- a/proj-3.html
+++ b/proj-3.html
@@ -3,8 +3,9 @@
 	<head>
 		<title>Mad Music</title>
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<script type="text/javascript" src="utils.js"></script>
-		<script type="text/javascript" src="main-3.js"></script>
+		<script data-main="scripts/main" src="scripts/require.js"></script>
+		<!-- <script type="text/javascript" src="scripts/utils.js"></script> -->
+		<!-- <script type="text/javascript" src="scripts/main-3.js"></script> -->
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
 	</head>
 
