--- a/proj-3.html
+++ b/proj-3.html
@@ -7,7 +7,7 @@
 		<!-- <link rel="stylesheet" type="text/css" href="dictaphone.css" /> -->
 		<!-- <script data-main="scripts/main" src="scripts/require.js"></script> -->
 		<script type="text/javascript" src="scripts/utils.js"></script>
-		<script type="text/javascript" src="scripts/pitch-shift-build.js"></script>
+		<script type="text/javascript" src="scripts/pitch-shift.js"></script>
 		<script type="text/javascript" src="scripts/main-3.js"></script>
 		<!-- <script type="text/javascript" src="scripts/dictaphone.js"></script> -->
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
@@ -24,8 +24,7 @@
 		<div id="recorder">
 			<section class="main-controls">
 				<div id="buttons">
-					<button id="start-recording">Record</button>
-					<button id="stop-recording">Stop</button>
+					<button id="toggle-recording">Record</button>
 				</div>
 			</section>
 			<section id="sound-clips"></section>
