--- a/proj-3.html
+++ b/proj-3.html
@@ -27,11 +27,14 @@
 					<button id="toggle-recording">Record</button>
 				</div>
 			</section>
-			<section id="sound-clips"></section>
+			<section id="sound-clips" />
 		</div>
 		<div id="playing-notes"></div>
 
-		<button id="stop-button">Do something different</button>
+		<div id="controls">
+			<button id="go-button">Go!</button>
+			<button id="stop-button">Do something different</button>
+		</div>
 	</body>
 
 </html>
