--- a/proj-3.html
+++ b/proj-3.html
@@ -18,7 +18,7 @@
 		<hr />
 		<div id="instructions">
 			<div id="browser-warning">Works in Chrome. Fails in inexplicably Firefox.</div>
-			<div>Press any key or click to play.</div>
+			<div>Record one or more brief (&lt; 1 sec) sound clips, then push the Go button.</div>
 		</div>
 
 		<div id="recorder">
