--- a/proj-4.html
+++ b/proj-4.html
@@ -42,7 +42,7 @@
 			<p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!
 			</p>
 		</aside>
-		<script src="dictaphone.js"></script>
+		<script src="scripts/dictaphone.js"></script>
 
 	</body>
 
