--- a/proj-3.html
+++ b/proj-3.html
@@ -17,8 +17,11 @@
 		<div id="headline">Mad Music</div>
 		<hr />
 		<div id="instructions">
-			<div id="browser-warning">Works in Chrome. Fails in inexplicably Firefox.</div>
-			<div>Record one or more brief (&lt; 1 sec) sound clips, then push the Go button.</div>
+			<div id="browser-warning">Works in Chrome. Might fail in Firefox.</div>
+			<div id="https-warning">Needs https in order to access mic! Since we don't yet have https on heliosophiclabs, you must use a proxy instead. Try <a
+					href="https://www.proxysite.com/">this
+					one,</a> for example.</div>
+			<div>Record one or more brief (&lt; 1 sec) sound clips. Then push the Go button and stand clear.</div>
 		</div>
 
 		<div id="recorder">
