--- a/proj-3.html
+++ b/proj-3.html
@@ -18,7 +18,7 @@
 		<hr />
 		<div id="instructions">
 			<div id="browser-warning">Works in Chrome. Might fail in Firefox.</div>
-			<div id="https-warning">Needs https in order to access mic! Since we don't yet have https on heliosophiclabs, you must use a proxy instead. Try <a
+			<div id="https-warning">Needs https in order to access the mic! Since we don't have https here (yet), you must use a proxy instead. Try <a target="proxy"
 					href="https://www.proxysite.com/">this
 					one,</a> for example.</div>
 			<div>Record one or more brief (&lt; 1 sec) sound clips. Then push the Go button and stand clear.</div>
