--- a/proj-3.html
+++ b/proj-3.html
@@ -17,11 +17,24 @@
 		<div id="headline">Mad Music</div>
 		<hr />
 		<div id="instructions">
-			<div id="browser-warning">Works in Chrome. Might fail in Firefox.</div>
+			<!-- <div id="browser-warning">Works in Chrome. Might fail in Firefox.</div> -->
 			<div id="https-warning">Needs https in order to access the mic! Since we don't have https here (yet), you must use a proxy instead. Try <a target="proxy"
 					href="https://www.proxysite.com/">this
 					one,</a> for example.</div>
-			<div>Record one or more brief (&lt; 1 sec) sound clips. Then push the Go button and stand clear.</div>
+			<div>Record one or more brief (&lt; 1 sec) sound clips, or use pre-recorded ones. Then push the Go button and stand clear.</div>
+		</div>
+
+		<div id="prerecorded-clips-container">
+			<div>
+				Pre-recorded clips:
+			</div>
+			<div id="prerecorded-clips">
+				<span file="blab.mp3">blab</span>
+				<span file="non.mp3">non</span>
+				<span file="chirps.mp3">chirps</span>
+				<span file="food-food.mp3">food food</span>
+				<span file="hi.mp3">hi</span>
+			</div>
 		</div>
 
 		<div id="recorder">
