--- a/proj-3.html
+++ b/proj-3.html
@@ -34,6 +34,16 @@
 				<span file="chirps.mp3">chirps</span>
 				<span file="food-food.mp3">food food</span>
 				<span file="hi.mp3">hi</span>
+				<span file="2-beat-bass.mp3">2-beat bass</span>
+				<span file="2-beat-guitar.mp3">2-beat guitar</span>
+				<span file="4-beat-bass.mp3">4-beat bass</span>
+				<span file="bass-slide.mp3">bass slide</span>
+				<span file="bassline-1.mp3">bassline</span>
+				<span file="chime.mp3">chime</span>
+				<span file="echo-guitar.mp3">echo guitar</span>
+				<span file="gong-1.mp3">gong</span>
+				<span file="guitar-slap.mp3">guitar slap</span>
+				<span file="horn-1.mp3">horn</span>
 			</div>
 		</div>
 
