--- a/proj-3.html
+++ b/proj-3.html
@@ -44,6 +44,7 @@
 				<span file="gong-1.mp3">gong</span>
 				<span file="guitar-slap.mp3">guitar slap</span>
 				<span file="horn-1.mp3">horn</span>
+				<span file="rem-get-up.mp3">R.E.M. Get Up clip</span>
 			</div>
 		</div>
 
