--- a/proj-3.html
+++ b/proj-3.html
@@ -45,6 +45,18 @@
 				<span file="guitar-slap.mp3">guitar slap</span>
 				<span file="horn-1.mp3">horn</span>
 				<span file="rem-get-up.mp3">R.E.M. Get Up clip</span>
+				<span file="ding.mp3">ding</span>
+				<span file="glass-gong.mp3">glass gong</span>
+				<span file="glass-rim.mp3">glass rim</span>
+				<span file="piano-note-high.mp3">piano note high</span>
+				<span file="piano-note-low.mp3">piano note low</span>
+				<span file="piano-slide-down.mp3">piano slide down</span>
+				<span file="piano-slide-up.mp3">piano slide up</span>
+				<span file="random-sine.mp3">random sine</span>
+				<span file="short-string.mp3">short string</span>
+				<span file="short-toot.mp3">short toot</span>
+				<span file="violin-note.mp3">violin note</span>
+				<span file="wobbly-note.mp3">wobbly note</span>
 			</div>
 		</div>
 
