--- a/proj-3.html
+++ b/proj-3.html
@@ -64,6 +64,14 @@
 			<section class="main-controls">
 				<div id="buttons">
 					<button id="toggle-recording">Record</button>
+					<div id="beats-per-measure-dropdown-container">
+						Beats per mesaure:
+						<select id="beats-per-measure-dropdown">
+							<option>4</option>
+							<option>8</option>
+							<option>16</option>
+						</select>
+					</div>
 				</div>
 			</section>
 			<section id="sound-clips" />
