--- a/proj-3.html
+++ b/proj-3.html
@@ -57,6 +57,16 @@
 				<span file="short-toot.mp3">short toot</span>
 				<span file="violin-note.mp3">violin note</span>
 				<span file="wobbly-note.mp3">wobbly note</span>
+				<span file="4-beat-snare.mp3">4-beat snare</span>
+				<span file="bass-drum-beat.mp3">bass drum beat 1</span>
+				<span file="bass-drum-beat-2.mp3">bass drum beat 2</span>
+				<span file="drum-n-bass.mp3">drum &amp; bass</span>
+				<span file="hang-1.mp3">hang 1</span>
+				<span file="hang-2.mp3">hang 2</span>
+				<span file="snare-1.mp3">snare</span>
+				<span file="techno-1.mp3">techno 1</span>
+				<span file="techno-2.mp3">techno 2</span>
+				<span file="verbal-1.mp3">verbal</span>
 			</div>
 		</div>
 
