--- a/proj-3.html
+++ b/proj-3.html
@@ -60,7 +60,7 @@
 				<span file="4-beat-snare.mp3">4-beat snare</span>
 				<span file="bass-drum-beat.mp3">bass drum beat 1</span>
 				<span file="bass-drum-beat-2.mp3">bass drum beat 2</span>
-				<span file="drum-n-bass.mp3">drum &amp; bass</span>
+				<span file="drum-n-bass-1.mp3">drum &amp; bass</span>
 				<span file="hang-1.mp3">hang 1</span>
 				<span file="hang-2.mp3">hang 2</span>
 				<span file="snare-1.mp3">snare</span>
