--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<li><a href="proj-1.html">Experiment 1</a></li>
 				<li><a href="proj-2.html">Experiment 2</a></li>
 				<li><a href="proj-3.html">Experiment 3</a></li>
+				<li><a href="proj-4.html">Experiment 4</a></li>
 			</ul>
 		</div>
 	</body>
