--- a/proj-4.html
+++ b/proj-4.html
@@ -16,9 +16,11 @@
 	<body onLoad="onLoad()">
 
 		<div class="main">
-			<button id="toggle-button">GO</button>
+			<div id="controls-div">
+				<button id="toggle-button">GO</button>
+			</div>
+			<table id="measures-table"></table>
 		</div>
-
 	</body>
 
 </html>
