--- a/proj-4.html
+++ b/proj-4.html
@@ -18,6 +18,7 @@
 		<div class="main">
 			<div id="controls-div">
 				<button id="toggle-button">GO</button>
+				<button id="reset-button">Reset</button>
 			</div>
 			<table id="measures-table"></table>
 		</div>
