--- a/proj-4.html
+++ b/proj-4.html
@@ -20,6 +20,10 @@
 				<button id="toggle-button">GO</button>
 				<button id="random-button">Random!</button>
 				<button id="reset-button">Reset</button>
+				<div id="tempo-slider-container">
+					<label for="tempo-slider">Tempo</label>
+					<input type="range" min="100" max="800" value="200" class="slider" id="tempo-slider" />
+				</div>
 			</div>
 			<table id="measures-table"></table>
 		</div>
