--- a/proj-4.html
+++ b/proj-4.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<link rel="stylesheet" type="text/css" href="style-4.css" />
 		<script type="text/javascript" src="scripts/utils.js"></script>
-		<!-- <script type="text/javascript" src="scripts/pitch-shift.js"></script> -->
+		<script type="text/javascript" src="scripts/pitch-shift.js"></script>
 		<script type="text/javascript" src="scripts/main-4.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
 	</head>
