--- a/proj-4.html
+++ b/proj-4.html
@@ -25,7 +25,10 @@
 					<input type="range" min="100" max="800" value="200" class="slider" id="tempo-slider" />
 				</div>
 			</div>
-			<table id="measures-table"></table>
+			<div id="mesure-tables">
+				<table id="rhythm-measures-table" />
+				<table id="melody-measures-table" />
+			</div>
 		</div>
 	</body>
 
