--- a/proj-4.html
+++ b/proj-4.html
@@ -22,7 +22,14 @@
 				<button id="reset-button">Reset</button>
 				<div id="tempo-slider-container">
 					<label for="tempo-slider">Tempo</label>
-					<input type="range" min="100" max="800" value="200" class="slider" id="tempo-slider" />
+					<input type="range" min="100" max="800" value="200" id="tempo-slider" />
+				</div>
+				<div id="evolve-container">
+					<input id="evolve-checkbox" type="checkbox" />
+					<label for="evolve-checkbox">Evolve</label>
+					<div id="evolution-slider-container">
+						<span>slow</span><input type="range" min="1" max="8" value="2" id="evolution-slider" /> <span>fast</span>
+					</div>
 				</div>
 			</div>
 			<div id="mesure-tables">
