--- a/proj-4.html
+++ b/proj-4.html
@@ -27,7 +27,7 @@
 				<div id="evolve-container">
 					<input id="evolve-checkbox" type="checkbox" />
 					<label for="evolve-checkbox">Evolve</label>
-					<div id="evolution-slider-container">
+					<div id="evolution-slider-container" class="hidden">
 						<span>slow</span><input type="range" min="1" max="8" value="2" id="evolution-slider" /> <span>fast</span>
 					</div>
 				</div>
@@ -37,6 +37,8 @@
 				<table id="melody-measures-table" />
 			</div>
 		</div>
+
+		<div id="note-selection" class="hidden" />
 	</body>
 
 </html>
