--- a/proj-4.html
+++ b/proj-4.html
@@ -9,17 +9,34 @@
 		<link rel="stylesheet" type="text/css" href="style-4.css" />
 		<script type="text/javascript" src="scripts/utils.js"></script>
 		<script type="text/javascript" src="scripts/pitch-shift.js"></script>
+		<script type="text/javascript" src="scripts/sampleCompositions.js"></script>
 		<script type="text/javascript" src="scripts/main-4.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
 	</head>
 
 	<body onLoad="onLoad()">
 
+		<div id="save-modal" class="hidden modal">
+			<div class="modal-header">Save Composition</div>
+			<div>
+				<label for="save-name">Name:</label>
+				<input type="text" id="save-name" value="Composition 1" />
+			</div>
+			<button id="save-button">Save</button>
+		</div>
+
+		<div id="load-modal" class="hidden modal">
+			<div class="modal-header">Load Composition </div>
+			<table id="compositions-list"></table>
+		</div>
+
 		<div class="main">
 			<div id="controls-div">
 				<button id="toggle-button">GO</button>
 				<button id="random-button">Random!</button>
 				<button id="reset-button">Reset</button>
+				<span id="open-load-button"><img src="icons/load-24px.svg" alt="Load music" /></span>
+				<span id="open-save-button"><img src="icons/save-24px.svg" alt="Save music" /></span>
 				<div id="tempo-slider-container">
 					<label for="tempo-slider">Tempo</label>
 					<input type="range" min="100" max="800" value="200" id="tempo-slider" />
@@ -38,7 +55,7 @@
 			</div>
 		</div>
 
-		<div id="note-selection" class="hidden" />
+		<div id="note-selection" class="hidden modal" />
 	</body>
 
 </html>
