--- a/proj-4.html
+++ b/proj-4.html
@@ -31,6 +31,9 @@
 		</div>
 
 		<div class="main">
+			<div id="byline">
+				Brought to you by <a href="https://www.gglabs.com/~mad">Marc A. Donis</a>. Thanks to <a href="https://freesound.org/">Freesound</a> for the samples!
+			</div>
 			<div id="controls-div">
 				<button id="toggle-button">GO</button>
 				<button id="random-button">Random!</button>
@@ -39,11 +42,11 @@
 				<span id="open-save-button"><img src="icons/save-24px.svg" alt="Save music" /></span>
 				<div id="tempo-slider-container">
 					<label for="tempo-slider">Tempo</label>
-					<input type="range" min="100" max="800" value="200" id="tempo-slider" />
+					<input type="range" min="100" max="800" value="600" id="tempo-slider" />
 				</div>
 				<div id="evolve-container">
 					<input id="evolve-checkbox" type="checkbox" />
-					<label for="evolve-checkbox">Evolve</label>
+					<label for="evolve-checkbox">Evolve</label><br />
 					<div id="evolution-slider-container" class="hidden">
 						<span>slow</span><input type="range" min="0" max="10" value="2" id="evolution-slider" /> <span>fast</span>
 					</div>
@@ -53,6 +56,7 @@
 				<table id="rhythm-measures-table" />
 				<table id="melody-measures-table" />
 			</div>
+
 		</div>
 
 		<div id="note-selection" class="hidden modal" />
