--- a/proj-4.html
+++ b/proj-4.html
@@ -32,7 +32,8 @@
 
 		<div class="main">
 			<div id="byline">
-				Brought to you by <a href="https://www.gglabs.com/~mad">Marc A. Donis</a>. Thanks to <a href="https://freesound.org/">Freesound</a> for the samples!
+				Brought to you by <a href="https://www.gglabs.com/~mad">Marc A. Donis</a>. Thanks to <a target="freesound" href="https://freesound.org/">Freesound</a> for the
+				samples!
 			</div>
 			<div id="controls-div">
 				<button id="toggle-button">GO</button>
