--- a/proj-4.html
+++ b/proj-4.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="style-4.css" />
 		<script type="text/javascript" src="scripts/utils.js"></script>
 		<script type="text/javascript" src="scripts/pitch-shift.js"></script>
+		<script type="text/javascript" src="scripts/clips.js"></script>
 		<script type="text/javascript" src="scripts/sampleCompositions.js"></script>
 		<script type="text/javascript" src="scripts/main-4.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
@@ -75,8 +76,15 @@
 				</div>
 			</div>
 			<div id="mesure-tables">
-				<table id="rhythm-measures-table" />
-				<table id="melody-measures-table" />
+				<div>
+					<table id="rhythm-measures-table">
+					</table>
+					<div class="add-clip-container" id="add-clip-container-rhythm"></div>
+				</div>
+				<div>
+					<table id="melody-measures-table"></table>
+					<div class="add-clip-container" id="add-clip-container-melody"></div>
+				</div>
 			</div>
 
 		</div>
