--- a/proj-4.html
+++ b/proj-4.html
@@ -44,7 +44,7 @@
 
 		<div class="main">
 			<div id="byline">
-				Brought to you by <a href="https://www.gglabs.com/~mad">Marc A. Donis</a>. Thanks to <a target="freesound" href="https://freesound.org/">Freesound</a> for the
+				Brought to you by <a href="https://www.fofolabs.com">Marc A. Donis</a>. Thanks to <a target="freesound" href="https://freesound.org/">Freesound</a> for the
 				samples!
 			</div>
 			<div id="controls-div">
