--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 	<head>
 		<script>
 			const request = new XMLHttpRequest();
-			request.open('GET', 'https://www.gglabs.com/~mad/projects/mad-music/non.mp3');
+			request.open('GET', 'https://www.fofolabs.com/mad-music/non.mp3');
 			request.send();
 		</script>
 	</head>
